# AmpModeler

./: .focus-config  .gitignore  AmpModeler.jucer  AmpModeler.kdev4  CMakeLists.txt  CMakeListsexpe.txt  LICENSE  README.md  VS_build_commands.txt  build.py  build_clang.py  imgui.ini
.kdev4/: AmpModeler.kdev4
Builds/LinuxMakefile/: Makefile
Builds/VisualStudio2022/: AmpModeler.sln  AmpModeler_SharedCode.vcxproj  AmpModeler_SharedCode.vcxproj.filters  AmpModeler_StandalonePlugin.vcxproj  AmpModeler_StandalonePlugin.vcxproj.filters  AmpModeler_VST3.vcxproj  AmpModeler_VST3.vcxproj.filters  AmpModeler_VST3ManifestHelper.vcxproj  resources.rc
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Source/: Biquad.cpp  Biquad.h  Boost.cpp  Boost.h  FaustHeader.h  FirstOrderFilter.h  FirstOrderShelf.h  IRLoader.cpp  IRLoader.h  JuceHeader.h  JucePluginDefines.h  NoiseGate.cpp  NoiseGate.h  OnepoleFilter.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Poweramp.cpp  Poweramp.h  PreBoost.cpp  PreBoost.h  Preamp.cpp  Preamp.h  PreampDistorsion.cpp  PreampDistorsion.h  SmoothParam.h  Tablesaw.cpp  Tablesaw.dsp  ThreeBandEQ.cpp  ThreeBandEQ.h  Tonestack.cpp  Tonestack.h  baseIR.inc  baseIR.jl  common.h  dr_wav_impl.cpp  main.cpp  types.h
Source/data/: baseIR.inc  baseIR_48.txt  baseIRs.h  waveshape_table.inc
Source/pffft/: pffft.c  pffft.h
Test/: VstTestet.maxpat
data/presets/: Breakup Clean.vstpreset  FiftyOneFitftIsh.vstpreset  FortinCalish.vstpreset  Le Fait Tout Nathan.vstpreset  NiceSplitCompression.vstpreset
experiments/: OverlapAddConvolution.jl  VS_build_commands.txt  acme_tonestack.jl  aligned_allocation.cpp  ampToneStack.jl  baseIR.jl  baseIR.txt  clipping_curves.jl  createTestWav.jl  first_order_shelf.jl  lookup_table.jl  partitioned_convolution.jl  tube_sim.jl  tube_sim.maxpat  wavParse.cpp
julia/: OverlapAddConvolution.jl  OverlapSaveConvolution.jl  SmoothParamCurve.jl  ampToneStack.jl  baseIR.jl
libs/JUCE/modules/juce_analytics/: juce_analytics.h
libs/JUCE/modules/juce_cryptography/: juce_cryptography.h
libs/JUCE/modules/juce_opengl/: juce_opengl.h
libs/JUCE/modules/juce_product_unlocking/: juce_product_unlocking.h
libs/juce/: .gitignore  CHANGE_LIST.md
libs/juce/examples/Assets/: AudioLiveScrollingDisplay.h
libs/juce/examples/Audio/: AudioAppDemo.h  AudioLatencyDemo.h  AudioPlaybackDemo.h  AudioRecordingDemo.h  AudioSettingsDemo.h  AudioSynthesiserDemo.h  AudioWorkgroupDemo.h  CapabilityInquiryDemo.h  MPEDemo.h  MidiDemo.h  PluckedStringsDemo.h  SimpleFFTDemo.h
libs/juce/examples/DSP/: ConvolutionDemo.h  FIRFilterDemo.h  GainDemo.h  IIRFilterDemo.h  OscillatorDemo.h  OverdriveDemo.h  SIMDRegisterDemo.h  StateVariableFilterDemo.h  WaveShaperTanhDemo.h
libs/juce/examples/DemoRunner/: DemoRunner.jucer
libs/juce/examples/GUI/: AccessibilityDemo.h  AnimationAppDemo.h  AnimationDemo.h  BouncingBallWavetableDemo.h  CameraDemo.h  CodeEditorDemo.h  ComponentDemo.h  ComponentTransformsDemo.h  DialogsDemo.h  FlexBoxDemo.h  FontsDemo.h  GraphicsDemo.h  GridDemo.h  HelloWorldDemo.h  ImagesDemo.h  KeyMappingsDemo.h  LookAndFeelDemo.h  MDIDemo.h  MenusDemo.h  MultiTouchDemo.h  OpenGLAppDemo.h  OpenGLDemo.h  OpenGLDemo2D.h  PropertiesDemo.h  VideoDemo.h  WebBrowserDemo.h  WidgetsDemo.h  WindowsDemo.h
libs/juce/examples/Plugins/: ARAPluginDemo.h  AUv3SynthPluginDemo.h  ArpeggiatorPluginDemo.h  AudioPluginDemo.h  DSPModulePluginDemo.h  GainPluginDemo.h  HostPluginDemo.h  MidiLoggerPluginDemo.h  MultiOutSynthPluginDemo.h  NoiseGatePluginDemo.h  ReaperEmbeddedViewPluginDemo.h  SamplerPluginDemo.h  SurroundPluginDemo.h
libs/juce/examples/Utilities/: AnalyticsCollectionDemo.h  Box2DDemo.h  ChildProcessDemo.h  CryptographyDemo.h  InAppPurchasesDemo.h  JavaScriptDemo.h  LiveConstantDemo.h  MultithreadingDemo.h  NetworkingDemo.h  OSCDemo.h  PushNotificationsDemo.h  SystemInfoDemo.h  TimersAndEventsDemo.h  UnitTestsDemo.h  ValueTreesDemo.h  XMLandJSONDemo.h
libs/juce/extras/AudioPluginHost/: AudioPluginHost.jucer
libs/juce/extras/BinaryBuilder/: BinaryBuilder.jucer
libs/juce/extras/Projucer/: Projucer.jucer
libs/juce/extras/UnitTestRunner/: UnitTestRunner.jucer
libs/juce/modules/juce_analytics/: juce_analytics.h
libs/juce/modules/juce_audio_basics/: juce_audio_basics.h
libs/juce/modules/juce_core/: juce_core.h  (+1 more)
libs/pffft/: pffft.c  pffft.h  pffft.lib
tests/: test_convolution.cpp  test_convolution.jl
(+354 files in other folders)
